[package]
name = "helloworld-tonic"
version = "0.1.0"
edition = "2018"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "shim"
path = "src/client.rs"

[dependencies]
tonic = "0.3"
prost = "0.6"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"] }

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
prost-types = "0.6.1"

[build-dependencies]
tonic-build = "0.3"